Ajuste Mostrar actividades y las Lineas

--- a/pert.html
+++ b/pert.html
@@ -95,6 +95,7 @@ jQuery(document).ready(function($) {
 		</div>
 	</div>
 	<div id="grafica"></div>
+	<canvas id="linea"></canvas>
 	<!--end-Activities-->
 	<!--Slider-Starts-Here-->
 	<script src="js/responsiveslides.min.js"></script>
