--- a/grafica.html
+++ b/grafica.html
@@ -1,7 +1,69 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title></title>
+  <link rel="stylesheet" href="">
+</head>
+<body>
+  <script src="js/jquery.min.js"></script>  
+<script>
+    /**
+     * Funcion que captura las variables pasados por GET
+     * http://www.lawebdelprogramador.com/pagina.html?id=10&pos=3
+     * Devuelve un array de clave=>valor
+     */
+    function getGET()
+    {
+        // capturamos la url
+        var loc = document.location.href;
+        // si existe el interrogante
+        if(loc.indexOf('?')>0)
+        {
+            // cogemos la parte de la url que hay despues del interrogante
+            var getString = loc.split('?')[1];
+            // obtenemos un array con cada clave=valor
+            var GET = getString.split('&');
+            var get = {};
+ 
+            // recorremos todo el array de valores
+            for(var i = 0, l = GET.length; i < l; i++){
+                var tmp = GET[i].split('=');
+                get[tmp[0]] = unescape(decodeURI(tmp[1]));
+            }
+            return get;
+        }
+    }
+ 
+    window.onload = function()
+    {
+        // Cogemos los valores pasados por get
+        var valores=getGET();
+        var actividades = JSON.parse(localStorage["actividad"]);
+        var tiempo = JSON.parse(localStorage["tiempo"]);
+        var valida = JSON.parse(localStorage["validacion"]);
+        console.log(actividades);
+        console.log(tiempo);
+        console.log(valida);
+        if(valores)
+        {
+            // hacemos un bucle para pasar por cada indice del array de valores
+            for(var index in valores)
+            {
+                document.write("<br>clave: "+index+" - valor: "+valores[index]);
+            }
+        }else{
+            // no se ha recibido ningun parametro por GET
+            document.write("<br>No se ha recibido ningún parámetro");
+        }
+    }
+    </script>
+ 
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 <script type="text/javascript">
     google.load("visualization", "1.1", {packages:["gantt"]});
-    //google.setOnLoadCallback(drawChart);
+    google.setOnLoadCallback(drawChart);
 
     function daysToMilliseconds(days) {
       return days * 24 * 60 * 60 * 1000;
@@ -80,3 +142,5 @@
     }
   </script>
   <div id="chart_div"></div>
+  </body>
+</html>
