--- a/grafica.html
+++ b/grafica.html
@@ -1,11 +1,21 @@
+
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title></title>
-  <link rel="stylesheet" href="">
-</head>
+<title>AppIO Learning</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">  
+<meta name="keywords" content="Bootstrap Responsive Templates, Iphone Compatible Templates, Smartphone Compatible Templates, Ipad Compatible Templates, Flat Responsive Templates"/>
+<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
+<link href="css/style.css" rel='stylesheet' type='text/css' />
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+<script src="js/jquery.min.js"></script>  
+<script src="js/funciones.js"></script>
+<script type="text/javascript" src="https://www.google.com/jsapi"></script>
+
+<!---- start-smoth-scrolling---->
+<script type="text/javascript" src="js/move-top.js"></script>
+<script type="text/javascript" src="js/easing.js"></script>
 <body>
   <script src="js/jquery.min.js"></script>  
 <script>
@@ -191,6 +201,68 @@ var valida;
 
     }
   </script>
-  <div id="chart_div"></div>
+    <div class="banner1" id="home">
+    <div class="container">
+      <div class="header">
+        <div class="menu">
+                  <a class="toggleMenu" href="#"><img src="images/menu-icon.png" alt="" /> </a>
+          <ul class="nav" id="nav">
+          <li><a href="index.html">Home</a></li>
+          <li class="active"><a href="pert.html" class="active">Pert-CPM</a></li>
+          </ul>
+                                  <!----start-top-nav-script---->
+                          <script type="text/javascript" src="js/responsive-nav.js"></script>
+          <script type="text/javascript">
+          jQuery(document).ready(function($) {
+            $(".scroll").click(function(event){   
+              event.preventDefault();
+              $('html,body').animate({scrollTop:$(this.hash).offset().top},1000);
+            });
+          });
+          </script>
+    <!----//End-top-nav-script---->
+          <span>AppIO Learning</span>
+        </div>
+        <div class="clearfix"> </div>
+      </div>
+    </div>
+  </div>
+
+  <div id="grafica"><div id="chart_div"></div></div>
+  <!--start-footer-->
+  <div class="footer">
+    <div class="container">
+      <div class="footer-main">
+        <div class="col-md-6 footer-left">
+          <ul>
+            <li><a href="#"><span class="fb"> </span></a></li>
+            <li><a href="#"><span class="twit"> </span></a></li>
+            <li><a href="#"><span class="in"> </span></a></li>
+          </ul>
+        </div>
+        <div class="col-md-6 footer-right">
+          <p>Design by <a href="http://w3layouts.com/">W3layouts</a></p>
+        </div>
+        <div class="clearfix"> </div>
+      </div>
+    </div>
+    <script type="text/javascript">
+      $(document).ready(function() {
+        /*
+        var defaults = {
+            containerID: 'toTop', // fading element id
+          containerHoverID: 'toTopHover', // fading element hover id
+          scrollSpeed: 1200,
+          easingType: 'linear' 
+        };
+        */
+        
+        $().UItoTop({ easingType: 'easeOutQuart' });
+        
+      });
+    </script>
+    <a href="#home" id="toTop" class="scroll" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
+  </div>
+  <!--end-footer-->
   </body>
 </html>
