--- a/grafica.html
+++ b/grafica.html
@@ -202,32 +202,7 @@ var valida;
 
     }
   </script>
-    <div class="banner1" id="home">
-    <div class="container">
-      <div class="header">
-        <div class="menu">
-                  <a class="toggleMenu" href="#"><img src="images/menu-icon.png" alt="" /> </a>
-          <ul class="nav" id="nav">
-          <li><a href="index.html">Home</a></li>
-          <li class="active"><a href="pert.html" class="active">Pert-CPM</a></li>
-          </ul>
-                                  <!----start-top-nav-script---->
-          <script type="text/javascript" src="js/responsive-nav.js"></script>
-          <script type="text/javascript">
-          jQuery(document).ready(function($) {
-            $(".scroll").click(function(event){   
-              event.preventDefault();
-              $('html,body').animate({scrollTop:$(this.hash).offset().top},1000);
-            });
-          });
-          </script>
-    <!----//End-top-nav-script---->
-          <span>AppIO Learning</span>
-        </div>
-        <div class="clearfix"> </div>
-      </div>
-    </div>
-  </div>
+
   <div class="contact">
     <div class="container">
       <div class="contact-bottom" id="step_one" >
@@ -255,39 +230,39 @@ var valida;
   </div>
   <div id="grafica"><div id="chart_div"></div></div>
   <!--start-footer-->
-  <div class="footer">
-    <div class="container">
-      <div class="footer-main">
-        <div class="col-md-6 footer-left">
-          <ul>
-            <li><a href="#"><span class="fb"> </span></a></li>
-            <li><a href="#"><span class="twit"> </span></a></li>
-            <li><a href="#"><span class="in"> </span></a></li>
-          </ul>
-        </div>
-        <div class="col-md-6 footer-right">
-          <p>Design by <a href="http://w3layouts.com/">W3layouts</a></p>
-        </div>
-        <div class="clearfix"> </div>
-      </div>
-    </div>
-    <script type="text/javascript">
+  <div class="footer" style="position:fixed;width: 100%;bottom: 0; height: 80px;">
+            <div class="container" style="width: auto;">
+                <div class="footer-main">
+                    <div class="col-md-6 footer-left">
+                        <ul>
+                            <li><a href="#"><span class="fb"> </span></a></li>
+                            <li><a href="#"><span class="twit"> </span></a></li>
+                            <li><a href="#"><span class="in"> </span></a></li>
+                        </ul>
+                    </div>
+                    <div class="col-md-6 footer-right" style="position: relative; bottom: 40px;">
+                        <p>Design by <a href="http://w3layouts.com/">W3layouts</a></p>
+                    </div>
+                    <div class="clearfix"> </div>
+                </div>
+            </div>
+            <script type="text/javascript">
       $(document).ready(function() {
         /*
         var defaults = {
             containerID: 'toTop', // fading element id
           containerHoverID: 'toTopHover', // fading element hover id
           scrollSpeed: 1200,
-          easingType: 'linear' 
+          easingType: 'linear'
         };
         */
-        
+
         $().UItoTop({ easingType: 'easeOutQuart' });
-        
+
       });
-    </script>
-    <a href="#home" id="toTop" class="scroll" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
-  </div>
+            </script>
+            <a href="#home" id="toTop" class="scroll" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
+        </div>
   <!--end-footer-->
   </body>
 </html>
