--- a/pert.html
+++ b/pert.html
@@ -8,11 +8,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="IE=8" />
 
+  <link rel="stylesheet" href="css/bootstrap.css" type="text/css" media="screen" charset="utf-8">
   <link rel="stylesheet" href="css/gh-buttons.css" type="text/css" media="screen" charset="utf-8">
   <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" charset="utf-8">
   <link rel="stylesheet" href="css/responsive.css" type="text/css" media="screen" charset="utf-8">
 	<link href="css/style_2.css" rel='stylesheet' type='text/css' />
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+  <script type="text/javascript" src="js/1.8.3_jquery.min.js"></script>
   <script type="text/javascript" src="lib/jquery-easing-1.3.0.js"></script>
   <script type="text/javascript" src="lib/modernizr.mediaqueries.transforms3d.js"></script>
   <script type="text/javascript" src="lib/responsive-hub.js"></script>
