--- a/grafica.html
+++ b/grafica.html
@@ -124,8 +124,8 @@ var valida;
       console.log(array);
 
       var options = {
-        height: 300,
-        width: 1400,
+        height: 250,
+        width: 800,
         is3D: true,
         gantt:{shadowEnabled:true,
 	        	barHeight:10,
@@ -155,7 +155,7 @@ var valida;
 
     }
   </script>
-
+  <div id="header" style="height: 70px; margin-bottom: 30px; background-color: #16A401;"><span>AppIO Learning</span></div>
   <div class="contact">
     <div class="container">
       <div class="contact-bottom" id="step_one" >
@@ -168,6 +168,7 @@ var valida;
   </div>
   <div id="grafica"><div id="chart_div"></div></div>
   <!--start-footer-->
+  <div>
   <div class="footer" style="position:fixed;width: 100%;bottom: 0; height: 80px;">
             <div class="container" style="width: auto;">
                 <div class="footer-main">
@@ -191,8 +192,10 @@ var valida;
 
       });
             </script>
-            <a href="#home" id="toTop" class="scroll" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
+            <a href="#home" id="toTop" class="scroll" style="display: block;"> 
+              <span id="toTopHover" style="opacity: 1;"> </span></a>
         </div>
+  </div>
   <!--end-footer-->
   </body>
 </html>
