--- a/menu.html
+++ b/menu.html
@@ -48,15 +48,16 @@
   </script>
 </head>
 <body>
+  <div id="header" style="height: 70px; margin-bottom: 30px;"><span>AppIO Learning</span></div>
   <div class="track example-2">
     <div class="inner">
       <h2>Menu</h2>
 
       <div class="view-port">
 		
-		<div class="boton_menu" id="menu_pert"><span>USAR PERT</span></div>
-		<div class="boton_menu" id="menu_concepto"><span>CONCEPTOS</span></div>
-		<div class="boton_menu" id="menu_contacto"><span>CONTACTO</span></div>
+		<div class="boton_menu" id="menu_pert" style="background-color: #009e0f;"><span>USAR PERT</span></div>
+		<div class="boton_menu" id="menu_concepto" style="background-color: #6aa84f;"><span>CONCEPTOS</span></div>
+		<div class="boton_menu" id="menu_contacto" style="background-color: #b6d7a8;"><span>CONTACTO</span></div>
     
       </div>
 
@@ -71,6 +72,24 @@
       <a href="#" class="next disabled"></a>
     </div>
   </div>
-
+  <div class="footer" style="position:relative;width: 100%;bottom: 0; height: 100%;margin-top: 23px;">
+      <div class="container" style="width: auto;">
+          <div class="footer-main">
+              <div class="col-md-6 footer-left">
+                  <ul>
+                      <li><a href="#">Nosotros<!-- <span class="fb"> </span> --></a></li>
+                      <li><a href="#"><!-- <span class="twit"> </span> --></a></li>
+                      <li><a href="#"><span class="in"> </span></a></li>
+                  </ul>
+              </div>
+              <div class="col-md-6 footer-right" style="position: relative; bottom: 40px;">
+                  <p>Design by <a href="http://w3layouts.com/">W3layouts</a></p>
+              </div>
+              <div class="clearfix"> </div>
+          </div>
+      </div>
+      <a href="#home" id="toTop" class="scroll" style="display: block;"> 
+        <span id="toTopHover" style="opacity: 1;"> </span></a>
+    </div>
 </body>
 </html>
