--- a/menu_pert.html
+++ b/menu_pert.html
@@ -48,6 +48,7 @@
   </script>
 </head>
 <body>
+  <div id="header" style="height: 70px; margin-bottom: 30px;"><span>AppIO Learning</span></div>
   <div class="track example-2">
     <div class="inner">
       <h2>Menu PERT</h2>
@@ -80,6 +81,26 @@
       <a href="#" class="next disabled"></a>
     </div>
   </div>
+
+  <div class="footer" style="position:relative;width: 100%;bottom: 0; height: 100%; margin-top: 40px;">
+      <div class="container" style="width: auto;">
+          <div class="footer-main">
+              <div class="col-md-6 footer-left">
+                  <ul>
+                      <li><a href="#">Nosotros<!-- <span></span> --></a></li>
+                      <li><a href="#"><!-- <span> </span> --></a></li>
+                      <li><a href="#"><!-- <span> </span> --></a></li>
+                  </ul>
+              </div>
+              <div class="col-md-6 footer-right" style="position: relative; bottom: 40px;">
+                  <p>Design by <a href="http://w3layouts.com/">W3layouts</a></p>
+              </div>
+              <div class="clearfix"> </div>
+          </div>
+      </div>
+      <a href="#home" id="toTop" class="scroll" style="display: block;"> 
+        <span id="toTopHover" style="opacity: 1;"> </span></a>
+    </div>
 
 </body>
 </html>
