--- a/grafica.html
+++ b/grafica.html
@@ -6,8 +6,15 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">  
 <meta name="keywords" content="Bootstrap Responsive Templates, Iphone Compatible Templates, Smartphone Compatible Templates, Ipad Compatible Templates, Flat Responsive Templates"/>
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />
-<link href="css/style.css" rel='stylesheet' type='text/css' />
+
+
+<link rel="stylesheet" href="css/normalize.css" type="text/css" media="screen" charset="utf-8">
+<link rel="stylesheet" href="css/bootstrap.css" type="text/css" media="screen" charset="utf-8">
+<link rel="stylesheet" href="css/gh-buttons.css" type="text/css" media="screen" charset="utf-8">
+<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" charset="utf-8">
+<link rel="stylesheet" href="css/responsive.css" type="text/css" media="screen" charset="utf-8">
+<link href="css/style_2.css" rel='stylesheet' type='text/css' />
+
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 <script src="js/jquery.min.js"></script>  
 <script src="js/funciones.js"></script>
@@ -125,7 +132,7 @@ var valida;
 
       var options = {
         height: 250,
-        width: 800,
+        //width: 800,
         is3D: true,
         gantt:{shadowEnabled:true,
 	        	barHeight:10,
@@ -157,7 +164,7 @@ var valida;
   </script>
   <div id="header" style="height: 70px; margin-bottom: 30px; background-color: #16A401;"><span>AppIO Learning</span></div>
   <div class="contact">
-    <div class="container">
+    <div class="container" style="width: auto !important;">
       <div class="contact-bottom" id="step_one" >
         <div class="col-md-7 contact-left">
           <h4>Diagrama Pert-CPM</h4>
@@ -167,35 +174,32 @@ var valida;
     </div>
   </div>
   <div id="grafica"><div id="chart_div"></div></div>
-  <!--start-footer-->
-  <div>
-  <div class="footer" style="position:fixed;width: 100%;bottom: 0; height: 80px;">
-            <div class="container" style="width: auto;">
-                <div class="footer-main">
-                    <div class="col-md-6 footer-left">
-                        <ul>
-                            <li><a href="#"><span class="fb"> </span></a></li>
-                            <li><a href="#"><span class="twit"> </span></a></li>
-                            <li><a href="#"><span class="in"> </span></a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-6 footer-right" style="position: relative; bottom: 40px;">
-                        <p>Design by <a href="http://w3layouts.com/">W3layouts</a></p>
-                    </div>
-                    <div class="clearfix"> </div>
-                </div>
-            </div>
-            <script type="text/javascript">
-      $(document).ready(function() {
 
-        //$().UItoTop({ easingType: 'easeOutQuart' });
-
-      });
-            </script>
-            <a href="#home" id="toTop" class="scroll" style="display: block;"> 
-              <span id="toTopHover" style="opacity: 1;"> </span></a>
-        </div>
+  <div id="info_graf">
+    
   </div>
+  <!--start-footer-->
+
+  <div class="footer" style="position:relative;width: 100%;bottom: 0; height: 100%;">
+      <div class="container" style="width: auto;">
+          <div class="footer-main">
+              <div class="col-md-6 footer-left">
+                  <ul>
+                      <li><a href="#">Nosotros<!-- <span></span> --></a></li>
+                      <li><a href="#"><!-- <span> </span> --></a></li>
+                      <li><a href="#"><!-- <span> </span> --></a></li>
+                  </ul>
+              </div>
+              <div class="col-md-6 footer-right" style="position: relative; bottom: 40px;">
+                  <p>Design by <a href="http://w3layouts.com/">W3layouts</a></p>
+              </div>
+              <div class="clearfix"> </div>
+          </div>
+      </div>
+      <a href="#home" id="toTop" class="scroll" style="display: block;"> 
+        <span id="toTopHover" style="opacity: 1;"> </span></a>
+  </div>
+
   <!--end-footer-->
   </body>
 </html>
