Validacion de Maximos en las casillas

--- a/menu.html
+++ b/menu.html
@@ -55,9 +55,9 @@
 
       <div class="view-port">
 		
-		<div class="boton_menu" id="menu_pert" style="background-color: #009e0f;"><span>USAR PERT</span></div>
-		<div class="boton_menu" id="menu_concepto" style="background-color: #6aa84f;"><span>CONCEPTOS</span></div>
-		<div class="boton_menu" id="menu_contacto" style="background-color: #b6d7a8;"><span>CONTACTO</span></div>
+		<div class="boton_menu" id="menu_pert" style="background-color: #009e0f;"><span>Usar PERT</span></div>
+		<div class="boton_menu" id="menu_concepto" style="background-color: #6aa84f;"><span>Conceptos</span></div>
+		<div class="boton_menu" id="menu_contacto" style="background-color: #b6d7a8;"><span>Contacto</span></div>
     
       </div>
 
@@ -79,7 +79,7 @@
                   <ul>
                       <li><a href="#">Nosotros<!-- <span class="fb"> </span> --></a></li>
                       <li><a href="#"><!-- <span class="twit"> </span> --></a></li>
-                      <li><a href="#"><span class="in"> </span></a></li>
+                      <li><a href="#"><!-- <span class="in"> </span> --></a></li>
                   </ul>
               </div>
               <div class="col-md-6 footer-right" style="position: relative; bottom: 40px;">
