--- a/pert.html
+++ b/pert.html
@@ -64,16 +64,16 @@
 
       	<div class="div_create"><label for="n_proyecto">Nombre Proyecto <input type="text" name="n_proyecto" id="n_proyecto"></label></div>
       	<div class="div_create"><label for="n_gerente">Nombre Gerente <input type="text" name="n_gerente" id="n_gerente"></label></div>
-      	<div class="div_create"><label for="f_inicio">Fecha Inicio <input type="date" name="f_inicio" id="f_inicio"></label></div>	
-      	<div class="div_create"><label for="m_tiempo">Medida de Tiempo 
-      		<select name="m_tiempo" id="m_tiempo">
-      			<option value="">--Seleccionar Medida--</option>
-      			<option value="d">Dias</option>
+      	<div class="div_create"><label for="f_inicio">Fecha Inicio <br><input type="date" name="f_inicio" id="f_inicio" style="line-height: 20px !important;"></label></div>	
+      	<div class="div_create"><label for="m_tiempo">Medida de Tiempo <br>
+      		<select name="m_tiempo" id="m_tiempo" style="line-height: 22px !important;">
+      			<option value="">--Selección Medida--</option>
+      			<option value="d">Días</option>
       			<option value="h">Hora</option>
       		</select>
       	</label></div>
-      	<div class="div_create"><label for="obj">Objetivo  
-      		<textarea name="obj" id="obj" cols="25" rows="5"></textarea>
+      	<div class="div_create"><label for="obj">Objetivo  <br>
+      		<textarea name="obj" id="obj" cols="33" rows="5"></textarea>
       		</label>
       	</div>	
 
