Ajustes Validaciones primera parte

--- a/menu_pert.html
+++ b/menu_pert.html
@@ -48,7 +48,7 @@
   </script>
 </head>
 <body>
-  <div id="header" style="height: 70px; margin-bottom: 30px;"><span>AppIO Learning</span></div>
+  <div id="header" style="height: 70px; margin-bottom: 30px;"><span>APPERT</span></div>
   <div class="track example-2">
     <div class="inner">
       <h2>Menu PERT</h2>
