--- a/menu.html
+++ b/menu.html
@@ -11,8 +11,8 @@
   <link rel="stylesheet" href="css/gh-buttons.css" type="text/css" media="screen" charset="utf-8">
   <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" charset="utf-8">
   <link rel="stylesheet" href="css/responsive.css" type="text/css" media="screen" charset="utf-8">
-	<link href="css/style_2.css" rel='stylesheet' type='text/css' />
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+  <link href="css/style_2.css" rel='stylesheet' type='text/css' />
+  <script type="text/javascript" src="js/1.8.3_jquery.min.js"></script>
   <script type="text/javascript" src="lib/jquery-easing-1.3.0.js"></script>
   <script type="text/javascript" src="lib/modernizr.mediaqueries.transforms3d.js"></script>
   <script type="text/javascript" src="lib/responsive-hub.js"></script>
@@ -23,6 +23,9 @@
   <script type="text/javascript" src="src/plugins/jquery.silver_track.responsive_hub_connector.js" charset="utf-8"></script>
   <script type="text/javascript" src="src/plugins/jquery.silver_track.css3_animation.js" charset="utf-8"></script>
   <script type="text/javascript" src="src/plugins/jquery.silver_track.circular_navigator.js" charset="utf-8"></script>
+
+  <link rel="stylesheet" href="js/jqueryui/jquery-ui.theme.css" type="text/css" media="screen" charset="utf-8">
+  <script src="js/jqueryui/jquery-ui.js"></script>
 
   <!-- <script type="text/javascript" src="js/script.js" charset="utf-8"></script>
   <script type="text/javascript" src="js/example1.js" charset="utf-8"></script> -->
