--- a/pert_avanzado.html
+++ b/pert_avanzado.html
@@ -25,6 +25,9 @@
   <script type="text/javascript" src="src/plugins/jquery.silver_track.css3_animation.js" charset="utf-8"></script>
   <script type="text/javascript" src="src/plugins/jquery.silver_track.circular_navigator.js" charset="utf-8"></script>
 
+  <link rel="stylesheet" href="js/jqueryui/jquery-ui.theme.css" type="text/css" media="screen" charset="utf-8">
+  <script src="js/jqueryui/jquery-ui.js"></script>
+
   <!-- <script type="text/javascript" src="js/script.js" charset="utf-8"></script>
   <script type="text/javascript" src="js/example1.js" charset="utf-8"></script> -->
   <script type="text/javascript" src="js/example2_and_3.js" charset="utf-8"></script>
@@ -119,5 +122,7 @@
       <a href="#home" id="toTop" class="scroll" style="display: block;"> 
         <span id="toTopHover" style="opacity: 1;"> </span></a>
     </div>
+      <!-- Dialogos para las alertas del sistema -->
+    <div id="dialog-message" title="Upss... algo no está bien"></div>
 </body>
 </html>
