--- a/C_CRONOGRAMA.html
+++ b/C_CRONOGRAMA.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" charset="utf-8">
   <link rel="stylesheet" href="css/responsive.css" type="text/css" media="screen" charset="utf-8">
 	<link href="css/style_2.css" rel='stylesheet' type='text/css' />
-  <script type="text/javascript" src="js/1.8.3_jquery.min.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
   <script type="text/javascript" src="lib/jquery-easing-1.3.0.js"></script>
   <script type="text/javascript" src="lib/modernizr.mediaqueries.transforms3d.js"></script>
   <script type="text/javascript" src="lib/responsive-hub.js"></script>
@@ -24,9 +24,6 @@
   <script type="text/javascript" src="src/plugins/jquery.silver_track.css3_animation.js" charset="utf-8"></script>
   <script type="text/javascript" src="src/plugins/jquery.silver_track.circular_navigator.js" charset="utf-8"></script>
 
-  <link rel="stylesheet" href="js/jqueryui/jquery-ui.theme.css" type="text/css" media="screen" charset="utf-8">
-  <script src="js/jqueryui/jquery-ui.js"></script>
-  
   <!-- <script type="text/javascript" src="js/script.js" charset="utf-8"></script>
   <script type="text/javascript" src="js/example1.js" charset="utf-8"></script> -->
   <script type="text/javascript" src="js/example2_and_3.js" charset="utf-8"></script>
@@ -51,27 +48,58 @@
   </script>
 </head>
 <body>
-  <div id="header" style="height: 70px; margin-bottom: 30px;"><span>APPERT</span></div>
+  <style>
+    .view-port, .track .inner, .slider-container .item.cover {
+        height: auto !important;
+        padding-left: 10px;
+    }
+  </style>
+  <div id="header" style="height: 70px; margin-bottom: 30px; background-color: #16A401;"><span>AppIO Learning</span></div>
   <div class="track example-2">
-    <div class="inner">
-      <h2>Menu PERT</h2>
+    <h2>&nbsp;&nbsp;Cronograma</h2>
+    <div class="inner" id="step_one">
+		
+	<div class="col-md-4 about-text-left">
+          <p align="justify">        
+          Es la descripción específica de las actividades y del tiempo que se va 
+          a emplear para la ejecución del proyecto. Se debe organizar el trabajo 
+          en fechas probables, para saber cuanto tiempo requerirá elaborar el trabajo
+          definitivo.
+          </p>
+          <div >
+            <img src="img/cronograma.png" alt="" style="height:100%; position:relative;width:100%">
+          </div>
+          
+          <p align="justify"> 
+            Actividad Predecesora:
+            <br>
+            - Es una actividad que se debe comenzar o terminar antes de que otra pueda
+            comnezar. 
+            <br><br>
+            Actividad Sucesora:
+            <br>
+            - Es una actividad que depende del comienzo o del fin de una tarea precedente.
+            <br><br>
+            Actividad de resumen:
+            <br>
+            - Son aquellas que se componen de subtareas y resume esas subtareas.
+          </p>
+          <p align="justify"> 
+            <b>Paso para elaborar la planeación de actividades:</b>
+            <br><br>
+            - Listar las actividades en columna. 
+            <br>
+            - Identificar el tiempo disponible para el proyecto indicado.
+            <br>
+            - Calcular el tiempo para cada actividad.
+            <br>
+            - Reordenar cronologicamente.
+            <br>
+            - Ajustar tiempo o secuencia de actividades.  
+          </p>
+           <center><a href="conceptos.html">Salir</a></center> 
+          </div>
 
-      <div class="view-port">
-    <div class="menu">
-      <span class="titulo_menu">PERT Basico</span>
-		<div class="boton_menu_int" id="menu_basico_int"><span>B</span></div>
-    </div>
-    <div class="menu">
-      <span class="titulo_menu">PERT Avanzado</span>
-    <div class="boton_menu_int" id="menu_pert_int"><span>A</span></div>
-    </div>
-    <div class="menu">
-      <span class="titulo_menu">Abir Proyecto</span>
-		<div class="boton_menu_int" id="menu_abrir_int"><span>O</span></div>
-    <div id="regresar"><a href="menu.html">Regresar</a></div>
-    </div>
-    
-      </div>
 
       <div class="bullet-pagination"></div>
       <!-- <div class="actions button-group">
@@ -84,15 +112,14 @@
       <a href="#" class="next disabled"></a>
     </div>
   </div>
-
-  <div class="footer" style="position:relative;width: 100%;bottom: 0; height: 100%; margin-top: 40px;">
+  <div class="footer" style="position:relative;width: 100%;bottom: 0; height: 100%;margin-top: 23px;">
       <div class="container" style="width: auto;">
           <div class="footer-main">
               <div class="col-md-6 footer-left">
                   <ul>
-                      <li><a href="#">Nosotros<!-- <span></span> --></a></li>
-                      <li><a href="#"><!-- <span> </span> --></a></li>
-                      <li><a href="#"><!-- <span> </span> --></a></li>
+                      <li><a href="#">Nosotros<!-- <span class="fb"> </span> --></a></li>
+                      <li><a href="#"><!-- <span class="twit"> </span> --></a></li>
+                      <li><a href="#"><span class="in"> </span></a></li>
                   </ul>
               </div>
               <div class="col-md-6 footer-right" style="position: relative; bottom: 40px;">
@@ -104,6 +131,5 @@
       <a href="#home" id="toTop" class="scroll" style="display: block;"> 
         <span id="toTopHover" style="opacity: 1;"> </span></a>
     </div>
-
 </body>
 </html>
