--- a/C_PERT.html
+++ b/C_PERT.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" charset="utf-8">
   <link rel="stylesheet" href="css/responsive.css" type="text/css" media="screen" charset="utf-8">
 	<link href="css/style_2.css" rel='stylesheet' type='text/css' />
-  <script type="text/javascript" src="js/1.8.3_jquery.min.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
   <script type="text/javascript" src="lib/jquery-easing-1.3.0.js"></script>
   <script type="text/javascript" src="lib/modernizr.mediaqueries.transforms3d.js"></script>
   <script type="text/javascript" src="lib/responsive-hub.js"></script>
@@ -24,9 +24,6 @@
   <script type="text/javascript" src="src/plugins/jquery.silver_track.css3_animation.js" charset="utf-8"></script>
   <script type="text/javascript" src="src/plugins/jquery.silver_track.circular_navigator.js" charset="utf-8"></script>
 
-  <link rel="stylesheet" href="js/jqueryui/jquery-ui.theme.css" type="text/css" media="screen" charset="utf-8">
-  <script src="js/jqueryui/jquery-ui.js"></script>
-  
   <!-- <script type="text/javascript" src="js/script.js" charset="utf-8"></script>
   <script type="text/javascript" src="js/example1.js" charset="utf-8"></script> -->
   <script type="text/javascript" src="js/example2_and_3.js" charset="utf-8"></script>
@@ -51,27 +48,47 @@
   </script>
 </head>
 <body>
-  <div id="header" style="height: 70px; margin-bottom: 30px;"><span>APPERT</span></div>
+  <style>
+    .view-port, .track .inner, .slider-container .item.cover {
+        height: auto !important;
+        padding-left: 10px;
+    }
+  </style>
+  <div id="header" style="height: 70px; margin-bottom: 30px; background-color: #16A401;"><span>AppIO Learning</span></div>
   <div class="track example-2">
-    <div class="inner">
-      <h2>Menu PERT</h2>
+    <h2>&nbsp;&nbsp;PERT</h2>
+    <div class="inner" id="step_one">
+		
+	<div class="col-md-4 about-text-left">
+          <p align="justify">        
+          Técnica que permite dirigir la programación del proyecto. El método PERT consiste en la representación gráfica de una red de tareas, que, cuando se colocan en cadena, permiten alcanzar los objetivos de un proyecto.
+          </p>
+                 
+          <p align="justify"> 
+            <b>El método PERT debe incluir:</b>
+            <br><br>
+            - Desglose preciso del proyecto en tareas. 
+            <br>
+            - Cálculo de la duración de cada tarea.
+            <br>
+            - La designación de un director del proyecto que se haga cargo de asegurar la supervisión de dicho proyecto, de informar, en caso de ser necesario, y de tomar decisiones en caso de que existan variaciones de las proyecciones.
+          <br><br>
+          <b>Red PERT</b>
+          <br>
+          </p>
+          <div >
+            <img src="img/redpert.png" alt="" style="height:100%; position:relative;width:100%">
+          </div>
+          <p align="justify"> 
+            Tareas: Representadas por una flecha. Se le asigna a cada una de las tareas un código y una duración. Sin embargo, la longitud de la flecha es independiente de la duración de la tarea.
+            <br><br>
+            Etapas: es decir, el inicio y el final de la tarea. Cada tarea tiene una etapa de inicio y una de finalización. Con excepción de las etapas iniciales y finales, cada etapa final es una etapa de inicio de la siguiente tarea. Las etapas generalmente están numeradas y representadas por un círculo, pero en algunos otros casos pueden estar representadas por otras formas (cuadrados, rectángulos, óvalos, etc.). 
+            <br></br>
+            Tareas ficticias: representadas por una flecha punteada que indica las limitaciones de las cadenas de tareas entre ciertas etapas.
+             </p>
+           <center><a href="conceptos.html">Salir</a></center> 
+          </div>
 
-      <div class="view-port">
-    <div class="menu">
-      <span class="titulo_menu">PERT Basico</span>
-		<div class="boton_menu_int" id="menu_basico_int"><span>B</span></div>
-    </div>
-    <div class="menu">
-      <span class="titulo_menu">PERT Avanzado</span>
-    <div class="boton_menu_int" id="menu_pert_int"><span>A</span></div>
-    </div>
-    <div class="menu">
-      <span class="titulo_menu">Abir Proyecto</span>
-		<div class="boton_menu_int" id="menu_abrir_int"><span>O</span></div>
-    <div id="regresar"><a href="menu.html">Regresar</a></div>
-    </div>
-    
-      </div>
 
       <div class="bullet-pagination"></div>
       <!-- <div class="actions button-group">
@@ -84,15 +101,14 @@
       <a href="#" class="next disabled"></a>
     </div>
   </div>
-
-  <div class="footer" style="position:relative;width: 100%;bottom: 0; height: 100%; margin-top: 40px;">
+  <div class="footer" style="position:relative;width: 100%;bottom: 0; height: 100%;margin-top: 23px;">
       <div class="container" style="width: auto;">
           <div class="footer-main">
               <div class="col-md-6 footer-left">
                   <ul>
-                      <li><a href="#">Nosotros<!-- <span></span> --></a></li>
-                      <li><a href="#"><!-- <span> </span> --></a></li>
-                      <li><a href="#"><!-- <span> </span> --></a></li>
+                      <li><a href="#">Nosotros<!-- <span class="fb"> </span> --></a></li>
+                      <li><a href="#"><!-- <span class="twit"> </span> --></a></li>
+                      <li><a href="#"><span class="in"> </span></a></li>
                   </ul>
               </div>
               <div class="col-md-6 footer-right" style="position: relative; bottom: 40px;">
@@ -104,6 +120,5 @@
       <a href="#home" id="toTop" class="scroll" style="display: block;"> 
         <span id="toTopHover" style="opacity: 1;"> </span></a>
     </div>
-
 </body>
 </html>
