--- a/conceptos.html
+++ b/conceptos.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="css/style.css" type="text/css" media="screen" charset="utf-8">
   <link rel="stylesheet" href="css/responsive.css" type="text/css" media="screen" charset="utf-8">
 	<link href="css/style_2.css" rel='stylesheet' type='text/css' />
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+  <script type="text/javascript" src="js/1.8.3_jquery.min.js"></script>
   <script type="text/javascript" src="lib/jquery-easing-1.3.0.js"></script>
   <script type="text/javascript" src="lib/modernizr.mediaqueries.transforms3d.js"></script>
   <script type="text/javascript" src="lib/responsive-hub.js"></script>
@@ -23,6 +23,9 @@
   <script type="text/javascript" src="src/plugins/jquery.silver_track.responsive_hub_connector.js" charset="utf-8"></script>
   <script type="text/javascript" src="src/plugins/jquery.silver_track.css3_animation.js" charset="utf-8"></script>
   <script type="text/javascript" src="src/plugins/jquery.silver_track.circular_navigator.js" charset="utf-8"></script>
+
+  <link rel="stylesheet" href="js/jqueryui/jquery-ui.theme.css" type="text/css" media="screen" charset="utf-8">
+  <script src="js/jqueryui/jquery-ui.js"></script>
 
   <!-- <script type="text/javascript" src="js/script.js" charset="utf-8"></script>
   <script type="text/javascript" src="js/example1.js" charset="utf-8"></script> -->
@@ -48,18 +51,80 @@
   </script>
 </head>
 <body>
-  <div id="header" style="height: 70px; margin-bottom: 30px;"><span>AppIO Learning</span></div>
+  <style>
+    .view-port, .track .inner, .slider-container .item.cover {
+        height: auto !important;
+        padding-left: 10px;
+    }
+  </style>
+  <div id="header" style="height: 70px; margin-bottom: 30px; background-color: #16A401;"><span>AppIO Learning</span></div>
   <div class="track example-2">
-    <div class="inner">
-      <h2>Conceptos</h2>
-
-      <div class="view-port">
+    <h2>&nbsp;&nbsp;Conceptos</h2>
+    <div class="inner" id="step_one">
 		
-		<div style="background-color: #b6d7a8; margin-bottom: 5px;"><span><strong>Que es Pert/CPM?:</strong>&nbsp;La t&eacute;cnica del PERT/CPM permite controlar y monitorear el progreso del proyecto permiti&eacute;ndole al administrador del proyecto tomar decisiones asertivas que impidan el atraso del proyecto y el desperdicio de recursos, enfocando su mayor&iacute;a de atenci&oacute;n en aquellas actividades de la ruta cr&iacute;tica.</span></div>
-		<div style="background-color: #b6d7a8; margin-bottom: 5px;"><span>CONCEPTOS</span></div>
-		<div style="background-color: #b6d7a8; margin-bottom: 5px;"><span>CONTACTO</span></div>
-    
+	<div class="view-port" id="info_proyecto" >
+        <center>
+        <table >
+          <tr>
+            <div class="div_create"><label for="n_proyecto"><h2>¿Que desea saber?<h2> 
+          </tr>
+          <tr>
+            <td>
+              <div class="div_create"><label for="n_gerente">La EDT &nbsp;&nbsp; 
+            </td>
+            <td onclick="javascript:cargar_concepto('edt');">     
+              <center><a href="javascript:void(0);">Ver</a></div></center>
+           </td>
+          </tr>
+           <tr>
+            <td>  
+              <div class="div_create"><label for="f_inicio" required>Actividad &nbsp;&nbsp;
+            </td>
+            <td onclick="javascript:cargar_concepto('actividad');">      
+              <center><a href="javascript:void(0);">Ver</a></div></center>
+            </td>
+          </tr>
+          <tr>
+            <td>  
+              <div class="div_create"><label for="f_inicio" required>Cronograma de Actividades &nbsp;&nbsp;
+            </td>
+            <td onclick="javascript:cargar_concepto('cronograma');">      
+              <center><a href="javascript:void(0);">Ver</a></div></center>
+            </td>
+          </tr>
+          <tr>
+            <td> 
+               <div class="div_create"><label for="obj">PERT   
+            </td>
+            <td onclick="javascript:cargar_concepto('pert');">
+              <center><a href="javascript:void(0);">Ver</a></div></center>
+            </td>
+          </tr>
+          <tr>
+            <td> 
+               <div class="div_create"><label for="obj">Holgura   
+            </td>
+            <td onclick="javascript:cargar_concepto('holgura');">
+              <center><a href="javascript:void(0);">Ver</a></div></center>
+            </td>
+          </tr>
+          <tr>
+            <td> 
+               <div class="div_create"><label for="obj">Ruta Critica   
+            </td>
+            <td onclick="javascript:cargar_concepto('r_critica');">
+              <center><a href="javascript:void(0);">Ver</a></div></center>
+            </td>
+          </tr>
+        </table>
+      </center>
+        <center>
+        <div class="botones">
+          <div><a href="menu.html">Regresar</a></div>
+        </div>  
+    </center>
       </div>
+
 
       <div class="bullet-pagination"></div>
       <!-- <div class="actions button-group">
@@ -91,5 +156,8 @@
       <a href="#home" id="toTop" class="scroll" style="display: block;"> 
         <span id="toTopHover" style="opacity: 1;"> </span></a>
     </div>
+
+      <!-- Dialogos para las alertas del sistema -->
+    <div id="dialog_message_concept" title="Conceptos"></div>
 </body>
 </html>
