ajuste imagenes y botones pert avan

--- a/pert.html
+++ b/pert.html
@@ -60,7 +60,7 @@
 	</style>
   <div id="header" style="height: 70px; margin-bottom: 30px; background-color: #16A401;"><span>AppIO Learning</span></div>
   <div class="track example-2">
-    <h2>Creaci&oacute;n PERT Basico</h2>
+    <h2>Creación de PERT básico</h2>
     <div class="inner" id="step_one">
 
       <div class="view-port" id="info_proyecto">
