--- a/pert_avanzado.html
+++ b/pert_avanzado.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="css/responsive.css" type="text/css" media="screen" charset="utf-8">
 	<link href="css/style_2.css" rel='stylesheet' type='text/css' />
   <script type="text/javascript" src="js/1.8.3_jquery.min.js"></script>
+  <script type="text/javascript" src="js/jquery-1.11.3.js"></script>
   <script type="text/javascript" src="lib/jquery-easing-1.3.0.js"></script>
   <script type="text/javascript" src="lib/modernizr.mediaqueries.transforms3d.js"></script>
   <script type="text/javascript" src="lib/responsive-hub.js"></script>
@@ -71,7 +72,7 @@
       	<div class="div_create"><label for="m_tiempo">Medida de Tiempo 
       		<select name="m_tiempo" id="m_tiempo">
       			<option value="">--Seleccionar Medida--</option>
-      			<option value="d">Dias</option>
+      			<option value="d">Días</option>
       			<option value="h">Hora</option>
       		</select>
       	</label></div>
