Ajuste Tutorial y trabajo Domingo

--- a/menu.html
+++ b/menu.html
@@ -54,7 +54,7 @@
   <div id="header" style="height: 70px; margin-bottom: 30px;"><span>APPERT</span></div>
   <div class="track example-2">
     <div class="inner">
-      <h2>Menu</h2>
+      <h2>Menú</h2>
 
       <div class="view-port">
 		
@@ -80,7 +80,7 @@
           <div class="footer-main">
               <div class="col-md-6 footer-left">
                   <ul>
-                      <li><a href="#">Nosotros<!-- <span class="fb"> </span> --></a></li>
+                      <li><a href="#"><!-- Nosotros <span class="fb"> </span> --></a></li>
                       <li><a href="#"><!-- <span class="twit"> </span> --></a></li>
                       <li><a href="#"><!-- <span class="in"> </span> --></a></li>
                   </ul>
