--- a/pert_avanzado.html
+++ b/pert_avanzado.html
@@ -66,19 +66,28 @@
 
       <div class="view-port" id="info_proyecto">
 
-      	<div class="div_create"><label for="n_proyecto">Nombre Proyecto <input type="text" name="n_proyecto" id="n_proyecto" required></label></div>
-      	<div class="div_create"><label for="n_gerente">Nombre Gerente <input type="text" name="n_gerente" id="n_gerente" required></label></div>
-      	<div class="div_create"><label for="f_inicio">Fecha Inicio <input type="date" name="f_inicio" id="f_inicio" required></label></div>	
-      	<div class="div_create"><label for="m_tiempo">Medida de Tiempo 
+      	<div class="div_create"><label for="n_proyecto">Nombre Proyecto: <br><input type="text" size="42" name="n_proyecto" id="n_proyecto" required></label></div>
+
+
+      	<div class="div_create"><label for="n_gerente">Nombre Gerente: <br><input type="text" size="42" name="n_gerente" id="n_gerente" required></label></div>
+
+
+      	<div class="div_create"><label for="f_inicio">Fecha Inicio: <br><input type="date" name="f_inicio" id="f_inicio" required></label></div>	
+
+
+      	<div class="div_create"><label for="m_tiempo">Medida de Tiempo: <br>
       		<select name="m_tiempo" id="m_tiempo">
       			<option value="">--Seleccionar Medida--</option>
       			<option value="d">Días</option>
       			<option value="h">Hora</option>
       		</select>
       	</label></div>
-        <div class="div_create"><label for="f_inicio" required>Presupuesto<input type="number" name="presupuesto" id="presupuesto"></label></div>
-      	<div class="div_create"><label for="obj">Objetivo  
-      		<textarea name="obj" id="obj" cols="25" rows="5"></textarea>
+
+
+        <div class="div_create"><label for="f_inicio" required>Presupuesto: <br><input type="number" size="42" name="presupuesto" id="presupuesto"></label></div>
+
+      	<div class="div_create"><label for="obj">Objetivo: 
+     		<textarea name="obj" id="obj" cols="40" rows="5"></textarea>
       		</label>
       	</div>	
 
@@ -109,7 +118,7 @@
           <div class="footer-main">
               <div class="col-md-6 footer-left">
                   <ul>
-                      <li><a href="#">Nosotros<!-- <span></span> --></a></li>
+                      <li><a href="#"><!-- Nosotros<span></span> --></a></li>
                       <li><a href="#"><!-- <span> </span> --></a></li>
                       <li><a href="#"><!-- <span> </span> --></a></li>
                   </ul>
