--- a/conceptos.html
+++ b/conceptos.html
@@ -57,7 +57,7 @@
         padding-left: 10px;
     }
   </style>
-  <div id="header" style="height: 70px; margin-bottom: 30px; background-color: #16A401;"><span>AppIO Learning</span></div>
+  <div id="header" style="height: 70px; margin-bottom: 30px; background-color: #16A401;"><span>APPERT</span></div>
   <div class="track example-2">
     <h2>&nbsp;&nbsp;Conceptos</h2>
     <div class="inner" id="step_one">
