--- a/js/Swipe-master/index.html
+++ b/js/Swipe-master/index.html
@@ -4,12 +4,7 @@
 <title>Swipe 2</title>
 <meta http-equiv="X-UA-Compatible" content="IE=8">
 <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0'/> 
-<link href='js/Swipe-master/style.css' rel='stylesheet'/>
-<link href='css/style.css' rel='stylesheet'/>
-<script type="text/javascript" src="js/1.8.3_jquery.min.js"></script>
-<script src="js/jquery-1.9.1.js" type="text/javascript" ></script>
-<script src='js/Swipe-master/swipe.js' type="text/javascript" ></script>
-<script src="js/funciones.js" type="text/javascript" ></script>
+<link href='style.css' rel='stylesheet'/>
 <style>
 
 /* Swipe 2 required styles */
@@ -35,11 +30,6 @@
 
 </head>
 <body>
-<!-- Referencia de Cordova que se agrega a la aplicación cuando se compila. -->
-<script src="cordova.js"></script>
-<script src="scripts/platformOverrides.js"></script>
-
-<script src="scripts/index.js"></script>
 
 <!-- <h1>Swipe 2</h1> -->
 
@@ -47,11 +37,11 @@
 
 <div id='mySwipe' style='max-width:500px;margin:0 auto' class='swipe'>
   <div class='swipe-wrap'>
-    <div><b><img src="images/tutorial1.jpg" alt="" style="width: 97%;"></b></div>
-    <div><b><img src="images/tutorial2.jpg" alt="" style="width: 97%;"></b></div>
-    <div><b><img src="images/tutorial3.jpg" alt="" style="width: 97%;"></b></div>
-    <div><b><img src="images/tutorial4.jpg" alt="" style="width: 97%;"></b></div>
-    <div><b><img src="images/tutorial5.jpg" alt="" style="width: 97%;"></b></div>
+    <div><b><img src="../../images/tutorial1.jpg" alt="" style="width: 97%;"></b></div>
+    <div><b><img src="../../images/tutorial2.jpg" alt="" style="width: 97%;"></b></div>
+    <div><b><img src="../../images/tutorial3.jpg" alt="" style="width: 97%;"></b></div>
+    <div><b><img src="../../images/tutorial4.jpg" alt="" style="width: 97%;"></b></div>
+    <div><b><img src="../../images/tutorial5.jpg" alt="" style="width: 97%;"></b></div>
     <!-- <div><b>1</b></div> -->
 
   </div>
@@ -66,11 +56,11 @@
 
 </div> -->
 
-<div id="btn_omitir">
-    <a href="menu.html"><button onclick='javascript:ingresar();'>Omitir</button></a>
-</div>
 
 
+
+<script src="../query-1.9.1.js"></script>
+<script src='swipe.js'></script>
 <script>
 
 // pure JS
@@ -78,7 +68,7 @@ var elem = document.getElementById('mySwipe');
 window.mySwipe = Swipe(elem, {
   // startSlide: 4,
   // auto: 3000,
-  continuous: false,
+  // continuous: true,
   // disableScroll: true,
   // stopPropagation: true,
   // callback: function(index, element) {},
@@ -89,6 +79,3 @@ window.mySwipe = Swipe(elem, {
 // window.mySwipe = $('#mySwipe').Swipe().data('Swipe');
 
 </script>
-
-</body>
-</html>
