--- a/menu_pert.html
+++ b/menu_pert.html
@@ -54,11 +54,11 @@
   <div id="header" style="height: 70px; margin-bottom: 30px;"><span>APPERT</span></div>
   <div class="track example-2">
     <div class="inner">
-      <h2>Menu PERT</h2>
+      <h2>Menú PERT</h2>
 
       <div class="view-port">
     <div class="menu">
-      <span class="titulo_menu">PERT Basico</span>
+      <span class="titulo_menu">PERT Básico</span>
 		<div class="boton_menu_int" id="menu_basico_int"><span>B</span></div>
     </div>
     <div class="menu">
@@ -66,7 +66,7 @@
     <div class="boton_menu_int" id="menu_pert_int"><span>A</span></div>
     </div>
     <div class="menu">
-      <span class="titulo_menu">Abir Proyecto</span>
+      <span class="titulo_menu">Abrir Proyecto</span>
 		<div class="boton_menu_int" id="menu_abrir_int"><span>O</span></div>
     <div id="regresar"><a href="menu.html">Regresar</a></div>
     </div>
@@ -90,7 +90,7 @@
           <div class="footer-main">
               <div class="col-md-6 footer-left">
                   <ul>
-                      <li><a href="#">Nosotros<!-- <span></span> --></a></li>
+                      <li><a href="#"><!-- Nosotros<span></span> --></a></li>
                       <li><a href="#"><!-- <span> </span> --></a></li>
                       <li><a href="#"><!-- <span> </span> --></a></li>
                   </ul>
