--- a/pert_avanzado.html
+++ b/pert_avanzado.html
@@ -59,7 +59,7 @@
 		    padding-left: 10px;
 		}
 	</style>
-  <div id="header" style="height: 70px; margin-bottom: 30px; background-color: #16A401;"><span>AppIO Learning</span></div>
+  <div id="header" style="height: 70px; margin-bottom: 30px; background-color: #16A401;"><span>APPERT</span></div>
   <div class="track example-2">
     <h2>Creaci&oacute;n PERT Avanzado</h2>
     <div class="inner" id="step_one">
