--- a/conceptos.html
+++ b/conceptos.html
@@ -142,9 +142,9 @@
           <div class="footer-main">
               <div class="col-md-6 footer-left">
                   <ul>
-                      <li><a href="#">Nosotros<!-- <span class="fb"> </span> --></a></li>
+                      <li><a href="#"><!-- Nosotros<span class="fb"> </span> --></a></li>
                       <li><a href="#"><!-- <span class="twit"> </span> --></a></li>
-                      <li><a href="#"><span class="in"> </span></a></li>
+                      <li><a href="#"><!-- <span class="in"> </span> --></a></li>
                   </ul>
               </div>
               <div class="col-md-6 footer-right" style="position: relative; bottom: 40px;">
