--- a/contactenos.html
+++ b/contactenos.html
@@ -126,7 +126,7 @@
           <div class="footer-main">
               <div class="col-md-6 footer-left">
                   <ul>
-                      <li><a href="#">Nosotros<!-- <span></span> --></a></li>
+                      <li><a href="#"><!-- Nosotros<span></span> --></a></li>
                       <li><a href="#"><!-- <span> </span> --></a></li>
                       <li><a href="#"><!-- <span> </span> --></a></li>
                   </ul>
