--- a/menu.html
+++ b/menu.html
@@ -61,14 +61,14 @@
 <body>
   <div id="header" style="height: 70px; margin-bottom: 30px;"><span>APPERT</span></div>
   <div class="track example-2">
-    <div class="inner">
+    <div class="inner" style='background: url("images/appert_verde_ldpi.png")no-repeat fixed center;'>
       <h2>Menú</h2>
 
       <div class="view-port">
 		
 		<div class="boton_menu" id="menu_pert" style="background-color: #009e0f;"><span>Usar PERT</span></div>
-		<div class="boton_menu" id="menu_concepto" style="background-color: #6aa84f;"><span>Conceptos</span></div>
-		<div class="boton_menu" id="menu_contacto" style="background-color: #b6d7a8;"><span>Contacto</span></div>
+		<div class="boton_menu" id="menu_concepto" style="background-color: #6aa84f;  width: 35%;"><span style="vertical-align: -webkit-baseline-middle;">Conceptos</span></div>
+		<div class="boton_menu" id="menu_contacto" style="background-color: #b6d7a8;"><span style="vertical-align: -webkit-baseline-middle;">Contacto</span></div>
     
       </div>
 
